#pragma once


class IWarrior {

};
